--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "three-sea-server",
   "version": "1.0.0",
+  "description": "해양 수온 API proxy 서버",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/paleon08/three-sea-server.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/paleon08/three-sea-server/issues"
   },
-  "homepage": "https://github.com/paleon08/three-sea-server#readme",
-  "description": ""
+  "homepage": "https://github.com/paleon08/three-sea-server#readme"
 }
